Fix Docker build: skip env validation during build
Problem: Cloud Build failed with 'Cannot find module /scripts/validate-env.js'
because the script is outside the Docker build context (./frontend).

Solution:
- Separate 'build' (Docker/Cloud Build) from 'build:local' (dev)
- 'build': No validation, for Docker (secrets injected at runtime)
- 'build:local': With validation, for local development
- 'start': Validation runs when app starts in Cloud Run
- 'dev': Validation runs before starting dev server

This allows Cloud Build to succeed while maintaining env validation
at runtime when the app starts in Cloud Run with injected secrets.

Related: Terragrunt apply was failing at Cloud Build step

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -7,7 +7,7 @@ dev:
 	doppler run -p keyfate -c dev -- pnpm dev
 
 build: install
-	doppler run -p keyfate -c dev -- pnpm build
+	doppler run -p keyfate -c dev -- pnpm build:local
 
 test:
 	doppler run -p keyfate -c dev -- pnpm test
