--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "validate-env": "node ../scripts/validate-env.js",
+    "dev": "npm run validate-env && next dev",
     "build": "next build",
-    "start": "next start",
+    "build:local": "npm run validate-env && next build",
+    "start": "npm run validate-env && next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
