--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "types": ["vitest/globals", "@testing-library/jest-dom"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
@@ -31,10 +27,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "vitest.config.mts"  ],
-  "exclude": [
-    "node_modules",
-    "scripts"
-  ]
+    "**/*.tsx",
+    "vitest.config.mts"
+  ],
+  "exclude": ["node_modules", "scripts"]
 }
