--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,11 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.0",
+    "@google-cloud/storage": "^7.17.2",
     "@hookform/resolvers": "^3.10.0",
     "@paddle/paddle-js": "^1.4.2",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
