feat: implement automatic database migrations on deployment
- Add migrate-and-start.sh script that runs migrations before starting Next.js server
- Update Dockerfile to include migration script, drizzle-kit, and migration files
- Move drizzle-kit to production dependencies for migration execution
- Add retry logic for database connections during startup
- Include scripts/ and drizzle/ directories in Cloud Build uploads
- Update frontend hash calculation to trigger rebuilds on migration changes

The migration script runs automatically on every Cloud Run deployment,
applying pending database migrations before the application starts serving traffic.

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -66,6 +66,8 @@ tasks.md
 
 # Scripts and database files (not needed for frontend)
 scripts/
+# Exception: frontend/scripts contains deployment scripts needed for Cloud Build
+!frontend/scripts/
 # Only exclude root-level db directory, not frontend/src/lib/db
 /db/
 memory-bank/
