--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "test:coverage": "vitest --coverage",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:migrate:prod": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
@@ -55,6 +56,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.4",
     "lucide-react": "^0.462.0",
     "next": "15.4.2",
@@ -84,7 +86,6 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
     "dotenv": "^17.2.3",
-    "drizzle-kit": "^0.28.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.4.2",
     "jsdom": "^26.1.0",
