feat: add runtime database configuration for Cloud Run deployments
Improves database migration reliability by using environment-specific
configurations that read DATABASE_URL from Secret Manager at runtime
rather than requiring hardcoded connection strings.

Changes:
- Add drizzle-runtime.config.ts support to Dockerfile
- Add npm script for runtime migrations (db:migrate:runtime)
- Update migrate-and-start.sh to use runtime configuration
- Support for staging and production environment configs

This enables Cloud Run to use Unix socket connections via Secret Manager
without requiring separate configuration files for each environment.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -51,9 +51,12 @@ RUN chown nextjs:nodejs .next
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
-# Copy migration script, drizzle config, and migrations (from build context, not builder stage)
+# Copy migration script, drizzle configs (all environments), and migrations (from build context, not builder stage)
 COPY --chown=nextjs:nodejs scripts/migrate-and-start.sh /app/scripts/migrate-and-start.sh
 COPY --chown=nextjs:nodejs drizzle.config.ts /app/drizzle.config.ts
+COPY --chown=nextjs:nodejs drizzle-staging.config.ts /app/drizzle-staging.config.ts
+COPY --chown=nextjs:nodejs drizzle-production.config.ts /app/drizzle-production.config.ts
+COPY --chown=nextjs:nodejs drizzle-runtime.config.ts /app/drizzle-runtime.config.ts
 COPY --chown=nextjs:nodejs drizzle /app/drizzle
 
 # Copy node_modules from builder for migration tools (drizzle-kit, postgres driver, etc.)
