--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "test:coverage": "vitest --coverage",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:migrate:prod": "drizzle-kit migrate",
+    "db:migrate:staging": "drizzle-kit migrate --config=drizzle-staging.config.ts",
+    "db:migrate:production": "drizzle-kit migrate --config=drizzle-production.config.ts",
+    "db:migrate:runtime": "drizzle-kit migrate --config=drizzle-runtime.config.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
