chore: add defaults to .env.local for DB

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -10,6 +10,8 @@ NEXT_PUBLIC_SUPPORT_EMAIL=support@localhost
 
 # Database Configuration
 DATABASE_URL=postgresql://postgres:dev_password_change_in_prod@localhost:5432/keyfate_dev
+DB_HOST=localhost
+DB_PORT=5432
 
 # Application Secrets (REQUIRED - Generate strong random values for production)
 # ENCRYPTION_KEY: 32-byte base64-encoded key for Shamir share encryption
