--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@auth/drizzle-adapter": "^1.11.0",
     "@google-cloud/storage": "^7.17.2",
     "@hookform/resolvers": "^3.10.0",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@paddle/paddle-js": "^1.4.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
