--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,46 +32,45 @@
     "db:proxy-prod": "cloud-sql-proxy --port=54321 keyfate-dev:us-central1:keyfate-postgres-production"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.11.0",
-    "@google-cloud/storage": "^7.17.2",
+    "@auth/drizzle-adapter": "^1.11.1",
+    "@google-cloud/storage": "^7.18.0",
     "@hookform/resolvers": "^3.10.0",
     "@marsidev/react-turnstile": "^1.3.1",
-    "@paddle/paddle-js": "^1.4.2",
+    "@paddle/paddle-js": "^1.5.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remixicon/react": "^4.7.0",
     "@stripe/stripe-js": "^5.10.0",
-    "@types/bcryptjs": "^3.0.0",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/nodemailer": "^7.0.2",
-    "bcryptjs": "^3.0.2",
-    "canvas-confetti": "^1.9.3",
+    "@types/nodemailer": "^7.0.4",
+    "bcryptjs": "^3.0.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.4",
     "lucide-react": "^0.462.0",
-    "next": "15.4.2",
-    "next-auth": "^4.24.11",
+    "next": "15.4.8",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.7",
+    "nodemailer": "^7.0.11",
     "ogl": "^1.0.11",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "^7.65.0",
+    "react-hook-form": "^7.68.0",
     "shamirs-secret-sharing": "^2.0.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
@@ -79,26 +78,27 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.19.22",
-    "@types/pg": "^8.15.5",
-    "@types/react": "^18.3.26",
+    "@types/node": "^20.19.25",
+    "@types/pg": "^8.15.6",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
     "dotenv": "^17.2.3",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.4.2",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "15.4.8",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "^3.4.18",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
