--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remixicon/react": "^4.7.0",
     "@stripe/stripe-js": "^5.10.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/canvas-confetti": "^1.9.0",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
@@ -61,6 +62,7 @@
     "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.4",
     "lucide-react": "^0.462.0",
+    "marked": "^17.0.1",
     "next": "15.4.8",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -71,6 +73,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.68.0",
+    "sanitize-html": "^2.17.0",
     "shamirs-secret-sharing": "^2.0.1",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
@@ -87,6 +90,7 @@
     "@types/pg": "^8.15.6",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
+    "@types/sanitize-html": "^2.16.0",
     "@vitejs/plugin-react": "^4.7.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
