--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,8 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.28.1",
     "drizzle-orm": "^0.36.4",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.462.0",
     "marked": "^17.0.1",
     "next": "15.4.8",
@@ -86,6 +88,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
     "@types/react": "^18.3.27",
