--- a/frontend-svelte/package.json
+++ b/frontend-svelte/package.json
@@ -54,6 +54,8 @@
     "vitest": "^4.0.18"
   },
   "dependencies": {
+    "@auth/core": "^0.34.3",
+    "@auth/sveltekit": "^1.11.1",
     "@google-cloud/storage": "^7.19.0",
     "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/typography": "^0.5.19",
