--- a/frontend-svelte/package.json
+++ b/frontend-svelte/package.json
@@ -27,6 +27,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.3.1",
     "@types/bcryptjs": "^3.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^25.3.2",
     "@types/nodemailer": "^7.0.11",
@@ -61,6 +62,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "bcryptjs": "^3.0.3",
     "bits-ui": "^2.16.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
