Railway hosting migration: in-app cron, GCS removal, Bun test compat fixes
- Add in-app cron scheduler (node-cron) with HMAC auth, starts via SvelteKit init hook
- Replace GCS with local filesystem for GDPR exports (/tmp/keyfate-exports/)
- Remove GCP infrastructure (infrastructure/, deploy scripts, GCP utility scripts)
- Update Dockerfile, .env.example, Makefile, CI for Railway
- Update health endpoint and /api/config for Railway env vars
- Fix Bun test runner compatibility: replace vi.mocked/vi.stubEnv/vi.stubGlobal/
  vi.resetModules with Bun-compatible equivalents across all test files
- Update openspec task tracking for hosting migration and SvelteKit migration

--- a/frontend-svelte/.env.example
+++ b/frontend-svelte/.env.example
@@ -4,18 +4,25 @@
 # Copy this file to .env.local and fill in the values.
 # Variables prefixed with PUBLIC_ are exposed to the browser.
 # All others are server-side only.
+#
+# On Railway, set these as service variables in the Railway dashboard.
+# DATABASE_URL is automatically provided by the Railway PostgreSQL plugin.
 # =============================================================================
 
 # --- Database ----------------------------------------------------------------
+# Railway provides this automatically when you add a PostgreSQL plugin.
+# For local dev, use docker-compose postgres.
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/keyfate_dev
 
-# --- Auth (NextAuth / Auth.js) -----------------------------------------------
+# --- Auth (Auth.js / @auth/sveltekit) ----------------------------------------
+# AUTH_SECRET is the preferred env var name for Auth.js v5.
+# NEXTAUTH_URL is still read for backwards compatibility.
+AUTH_SECRET=generate-a-random-secret-at-least-32-chars
 NEXTAUTH_URL=http://localhost:5173
-NEXTAUTH_SECRET=generate-a-random-secret-at-least-32-chars
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+AUTH_GOOGLE_ID=your-google-client-id.apps.googleusercontent.com
+AUTH_GOOGLE_SECRET=your-google-client-secret
 
 # --- Stripe ------------------------------------------------------------------
 STRIPE_SECRET_KEY=sk_test_...
@@ -47,15 +54,13 @@ ENCRYPTION_KEY=generate-a-random-encryption-key
 
 # --- Cron / Admin ------------------------------------------------------------
 CRON_SECRET=generate-a-random-cron-secret
+# Set to "false" to disable the in-app cron scheduler (e.g. for local dev)
+# CRON_ENABLED=false
 ADMIN_TOKEN=generate-a-random-admin-token
 # ADMIN_ALLOWED_IPS=
 
 # --- Cloudflare Turnstile (optional) -----------------------------------------
 # TURNSTILE_SECRET_KEY=
-
-# --- Google Cloud (production) -----------------------------------------------
-# GOOGLE_CLOUD_REGION=us-central1
-# EXPORT_BUCKET=keyfate-exports-dev
 
 # --- Public (browser-accessible) variables -----------------------------------
 PUBLIC_SITE_URL=http://localhost:5173
@@ -65,8 +70,10 @@ PUBLIC_COMPANY=KeyFate
 PUBLIC_PARENT_COMPANY=Aviat, LLC
 PUBLIC_ENV=development
 PUBLIC_AUTH_PROVIDER=google
-PUBLIC_DATABASE_PROVIDER=cloudsql
 # PUBLIC_BTCPAY_SERVER_URL=
+
+# --- Server port (Railway sets PORT automatically) ---------------------------
+# PORT=3000
 
 # --- Database connection tuning (optional) -----------------------------------
 # DB_POOL_MAX=20
