--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,16 @@
-name: CI - SvelteKit Frontend
+name: CI
 
 on:
   push:
     branches: [main, develop, staging]
     paths:
       - "frontend-svelte/**"
+      - ".github/workflows/ci.yml"
   pull_request:
     branches: [main, develop, staging]
     paths:
       - "frontend-svelte/**"
+      - ".github/workflows/ci.yml"
 
 defaults:
   run:
@@ -66,3 +68,14 @@ jobs:
 
       - name: Build
         run: bun run build
+
+  docker:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: docker build -t keyfate:test .
+        working-directory: frontend-svelte
