--- a/frontend-svelte/package.json
+++ b/frontend-svelte/package.json
@@ -30,6 +30,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^25.3.2",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.11",
     "@types/sanitize-html": "^2.16.0",
     "dotenv": "^17.3.1",
@@ -57,8 +58,12 @@
   "dependencies": {
     "@auth/core": "^0.34.3",
     "@auth/sveltekit": "^1.11.1",
-    "@google-cloud/storage": "^7.19.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@noble/ciphers": "^2.1.1",
+    "@noble/curves": "^2.0.1",
+    "@noble/hashes": "^2.0.1",
+    "@scure/base": "^2.0.0",
+    "@scure/btc-signer": "^2.0.1",
     "@tailwindcss/typography": "^0.5.19",
     "bcryptjs": "^3.0.3",
     "bits-ui": "^2.16.2",
@@ -71,7 +76,9 @@
     "jszip": "^3.10.1",
     "lucide-svelte": "^0.575.0",
     "marked": "^17.0.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^8.0.1",
+    "nostr-tools": "^2.23.3",
     "postgres": "^3.4.8",
     "sanitize-html": "^2.17.1",
     "shamirs-secret-sharing": "^2.0.1",
