--- a/frontend-svelte/package.json
+++ b/frontend-svelte/package.json
@@ -66,6 +66,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "bcryptjs": "^3.0.3",
     "bits-ui": "^2.16.2",
+    "buffer": "^6.0.3",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
